# include_optional

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: include_bytes_optional.rs  include_optional.rs  include_str_optional.rs
examples/metadata_files/: file_exists.rs  file_exists.txt
src/: lib.rs  metadata_files
tests/integration/: absolute_path.rs  main.rs  relative_path.rs
tests/macro_caching/: .gitignore  Cargo.toml  README.md
tests/macro_caching/src/: main.rs
tests/trybuild/: include_str_missing_permissions.rs  include_str_missing_permissions.stderr  include_str_missing_permissions_for_subdirectory.rs  include_str_missing_permissions_for_subdirectory.stderr
