[package]
name = "include_optional"
version = "0.1.0"
edition = "2018"
description = "Option-returning versions of include_X macros"
license = "MIT OR Apache-2.0"
keywords = ["include", "option", "proc-macro"]
repository = "https://github.com/EliasHolzmann/include-optional"
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", default-features = false, features = ["parsing", "printing", "proc-macro"] }
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"

[lib]
proc-macro = true
