[package]
name = "include_optional"
version = "1.1.1"
edition = "2018"
description = "Option-returning versions of include_X macros"
license = "MIT OR Apache-2.0"
keywords = ["include", "option", "proc-macro"]
repository = "https://github.com/EliasHolzmann/include_optional"
categories = ["no-std"]

[features]
nightly = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.108", default-features = false, features = ["parsing", "printing", "proc-macro"] }
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"

[lib]
proc-macro = true
